--- a/Precourse-3/.vscode/tasks.json
+++ b/Precourse-3/.vscode/tasks.json
@@ -2,13 +2,17 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc build active file",
-            "command": "/usr/bin/make",
+            "label": "C/C++: g++ build active file",
+            "command": "/usr/bin/g++",
             "args": [
-                "CFLAGS=\"-std=c++14 -O3 -Wall -I/usr/local/include -g\""
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "options": {
-                "cwd": "/home/thuan/moreh-precources/Precourse-3/Problem1/vector"
+                "cwd": "${fileDirname}"
             },
             "problemMatcher": [
                 "$gcc"
