rename and add read cache size from file system

--- a/Precourse-4/Makefile
+++ b/Precourse-4/Makefile
@@ -4,8 +4,8 @@ CFLAGS=-std=c++14 -O3 -Wall -march=native -I/usr/local/include -g
 LDFLAGS=-L/usr/local/lib
 LDLIBS=-lstdc++
 
-TARGET=main
-OBJECTS=main.o
+TARGET=memory_mountain
+OBJECTS=memory_mountain.o
 
 all: $(TARGET)
 
