add disk benchmark

--- a/Precourse-4/.vscode/settings.json
+++ b/Precourse-4/.vscode/settings.json
@@ -50,6 +50,9 @@
         "typeinfo": "cpp",
         "semaphore": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "condition_variable": "cpp",
+        "fstream": "cpp",
+        "mutex": "cpp"
     }
 }
